# opencv_test

./: CMakeLists.txt  README.md  main.cpp
